--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,11 @@ build/
 
 # Environment files
 .env
-.env.*
-*.env
+.env.local
+.env.development
+.env.production
+
+!.env.example
 
 # IDE / OS
 .vscode/
